--- a/userform/userform/template/index.html
+++ b/userform/userform/template/index.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+{% extends "base.html" %}
+{% block content %}
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -64,27 +55,4 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <script>
-        document.getElementById('registrationForm').addEventListener('submit', function(event) {
-            // 1. Prevent the default form submission (page reload)
-            event.preventDefault();
-
-            // 2. Form validation check (Bootstrap's 'required' handles most, but we check here too)
-            if (this.checkValidity()) {
-                // 3. Clear the form fields after successful 'submission'
-                this.reset();
-                
-                // 4. Show the Thank You Modal (Popup)
-                // Get the modal element
-                var thankYouModalElement = document.getElementById('thankYouModal');
-                // Create a Bootstrap Modal instance
-                var thankYouModal = new bootstrap.Modal(thankYouModalElement);
-                // Show the modal
-                thankYouModal.show();
-            }
-        });
-    </script>
-</body>
-</html>
+{% endblock  %}    
