--- a/userform/userform/templates/index.html
+++ b/userform/userform/templates/index.html
@@ -7,7 +7,7 @@
                     <h2 class="card-title text-center mb-4">User Registration</h2>
                     
                     <form id="registrationForm">
-                        
+                        {% csrf_token %}
                         <div class="mb-3">
                             <label for="name" class="form-label">Full Name</label>
                             <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
@@ -29,7 +29,7 @@
                         </div>
                         
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg custom-btn">Register</button>
+                            <button type="submit" class="btn btn-primary btn-lg custom-btn" name="submit">Register</button>
                         </div>
                     </form>
                 </div>
