--- a/userform/userform/templates/index.html
+++ b/userform/userform/templates/index.html
@@ -10,17 +10,17 @@
                         {% csrf_token %}
                         <div class="mb-3">
                             <label for="name" class="form-label">Full Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
-                        </div>
-                        
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Enter your full name" required>
+                         </div>
+    
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                            <input type="email" class="form-control" id="email" name="email1" placeholder="name@example.com" required>
                         </div>
-                        
+    
                         <div class="mb-3">
                             <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password" required>
+                            <input type="password" class="form-control" id="password" name="password" required>
                         </div>
                         
                         <div class="mb-3 form-check">
@@ -29,7 +29,7 @@
                         </div>
                         
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg custom-btn" name="submit">Register</button>
+                            <button type="submit" class="btn btn-primary btn-lg custom-btn">Register</button>
                         </div>
                     </form>
                 </div>
@@ -53,6 +53,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
 
 {% endblock  %}    
