--- a/userform/userform/templates/index.html
+++ b/userform/userform/templates/index.html
@@ -6,7 +6,7 @@
                 <div class="card shadow-lg p-4 custom-card">
                     <h2 class="card-title text-center mb-4">User Registration</h2>
                     
-                    <form id="registrationForm">
+                    <form id="registrationForm" action="{% url 'home' %}" method="POST">
                         {% csrf_token %}
                         <div class="mb-3">
                             <label for="name" class="form-label">Full Name</label>
@@ -15,7 +15,7 @@
     
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" name="email1" placeholder="name@example.com" required>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
                         </div>
     
                         <div class="mb-3">
@@ -29,7 +29,7 @@
                         </div>
                         
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg custom-btn">Register</button>
+                            <button type="submit" method="POST" class="btn btn-primary btn-lg custom-btn">Register</button>
                         </div>
                     </form>
                 </div>
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="thankYouModal" tabindex="-1" aria-labelledby="thankYouModalLabel" aria-hidden="true">
+    {% comment %} <div class="modal fade" id="thankYouModal" tabindex="-1" aria-labelledby="thankYouModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header bg-success text-white">
@@ -53,6 +53,6 @@
                 </div>
             </div>
         </div>
-    </div> 
+    </div>  {% endcomment %}
 
 {% endblock  %}    
