--- a/userform/userform/templates/index.html
+++ b/userform/userform/templates/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    {% comment %} <div class="modal fade" id="thankYouModal" tabindex="-1" aria-labelledby="thankYouModalLabel" aria-hidden="true">
+    <div class="modal fade" id="thankYouModal" tabindex="-1" aria-labelledby="thankYouModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header bg-success text-white">
@@ -53,6 +53,6 @@
                 </div>
             </div>
         </div>
-    </div>  {% endcomment %}
+    </div>  
 
 {% endblock  %}    
